# embedder

./: .gitignore  Cargo.toml  build.rs  default.nix  mobilize.toml  uniffi.toml
src/: cosine.rs  embedder.rs  embedder.udl  error.rs  lib.rs  mobile.rs  onnx.rs
src/model/: mod.rs
