[package]
name = "embedder"
version = "0.1.0"
edition = "2021"

#[[bin]]
#name = "serve"

[lib]
crate-type = ["lib"]
name = "embedder"

[dependencies]


#instant-distance = { version = "0.6.1", features = ["serde"] }burn = { version = "0.15.0", optional = true }
burn-ndarray = { version = "0.15.0", optional = true }
burn-wgpu = { version = "0.15.0", optional = true }
image = "0.25.5"
ndarray = "0.16.1"
rayon = "1.10.0"
simsimd = "6.2.3"
thiserror = "2.0.11"
ort = { version = "=2.0.0-rc.9", features = [
    "coreml",
    "xnnpack",
], optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
heed = "0.21.0"
uuid = { version = "1.13.1", features = ["v4"] }
burn = { version = "0.15.0", optional = true }
uniffi = { version = "0.28", features = ["scaffolding-ffi-buffer-fns"] }

[build-dependencies]
uniffi = { version = "0.28", features = [
    "build",
    "scaffolding-ffi-buffer-fns",
] }
burn-import = { version = "~0.15", optional = true }


#ALWAYS TEST IN RELEASE MODE
# because testing with ndArray backend takes 120s in debug mode
#

[features]
default = ["burn"]
#ort = ["dep:ort"]
server = []
burn = ["dep:burn", "dep:burn-ndarray", "dep:burn-wgpu", "dep:burn-import"] #
ort = ["dep:ort"]
mobile = []
